--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
      <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-     <title>Employee Manager</title>
+     <title>Vue Firebase | Employee Manager</title>
 
-    <meta name="description" content="Vue Firebase Employee Manager with authentication based from Brad Traversy crash course. Email: xadf327@gmail.com">
+    <meta name="description" content="Vue Firebase Employee Manager with authentication based from Brad Traversy crash course. Email:xadf327@gmail.com Resume:lldakila.github.io">
     <meta name="keywords" content="Dakila Lozano, Software Developer, Web Development, Resume, Programmer, lldakila.github.io, Dakila, Lozano, Tuguegarao, Cagayan, Region 2">
     <meta name="author" content="Dakila Lozano">
   </head>
